--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.10",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.7.2",
+    "twilio": "^3.77.0"
   }
 }
