--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,17 +16,26 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ansi-html": "^0.0.9",
+    "ansi-regex": "^6.0.1",
+    "async": "^3.2.3",
     "bootstrap": "^5.0.2",
+    "ejs": "^3.1.8",
     "framer-motion": "^4.1.17",
+    "glob-parent": "^6.0.2",
     "interweave": "^12.8.0",
     "jdenticon": "^3.1.1",
     "jwt-decode": "^3.1.2",
+    "minimist": "^1.2.6",
+    "nanoid": "^3.3.4",
+    "node-forge": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "url-parse": "^1.5.10",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
