--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,10 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "engines": {
+    "node": "17.3.0",
+    "npm": "8.3.0"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.6.0",
