--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "devStart": "nodemon index.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
+    "install-client": "cd client && npm install --force",
     "heroku-postbuild": "npm run install-client && npm run build"
   },
   "keywords": [],
