--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
-    "react-quill": "^1.3.5",
+    "react-quilljs": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "url-parse": "^1.5.10",
