--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "backend",
+  "engines": {
+    "node": "17.3.0"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
