Added image uploads for articles

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,3 +1,4 @@
 {
-    "site_url": "https://tvmc.herokuapp.com"
+    "apiUrl": "http://tvmcalumniassociationnorthamerica.com",
+    "assetsUrl": "http://assets.tvmcalumniassociationnorthamerica.com"
 }
