--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,4 +1,4 @@
 {
-    "apiUrl": "http://www.tvmcalumniassociationnorthamerica.com",
+    "apiUrl": "http://localhost:5000",
     "assetsUrl": "http://assets.tvmcalumniassociationnorthamerica.com"
 }
