--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build"
   },
+  "engines": {
+    "node": "v18.9.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,7 +29,7 @@
     "mongodb": "^3.6.10",
     "multer": "^1.4.2",
     "multer-s3": "^2.10.0",
-    "nodemailer": "^6.7.2",
+    "nodemailer": "^6.9.1",
     "twilio": "^3.77.0"
   },
   "devDependencies": {
