--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-quilljs": "^1.3.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "url-parse": "^1.5.10",
     "web-vitals": "^1.1.2"
   },
