--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,4 +1,4 @@
 {
-    "apiUrl": "http://localhost:5001",
+    "apiUrl": "http://tvmcalumniassociationnorthamerica.com",
     "assetsUrl": "http://assets.tvmcalumniassociationnorthamerica.com"
 }
