--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1180.0",
+    "aws-sdk": "^2.1595.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.10",
+    "mongodb": "^6.5.0",
     "multer": "^1.4.2",
     "multer-s3": "^2.10.0",
     "nodemailer": "^6.9.1",
+    "s3-proxy": "^1.2.1",
     "twilio": "^3.77.0"
   },
   "devDependencies": {
