Fixed CD pipeline

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "devStart": "nodemon index.js",
-    "client": "cd client && npm start",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "devStart": "nodemon index.js"
   },
   "engines": {
     "node": "v18.9.0"
