--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,6 @@
-FROM node:20
+FROM node:18
 WORKDIR /app
-COPY ./package.json ./package.json
-COPY ./package-lock.json ./package-lock.json
-COPY ./api ./api
-COPY ./dao ./dao
-COPY ./client ./client
-COPY ./other ./other
-COPY ./schema ./schema
-COPY ./index.js ./index.js
-COPY ./mail.js ./mail.js
-COPY ./server.js ./server.js
-COPY ./storage.js ./storage.js
-ENV NODE_ENV production
+COPY package*.json ./
 RUN npm install
-RUN npm run heroku-postbuild
-CMD ["npm","start"]
+COPY . .
+CMD ["npm", "start"]
