Updated  CD pipeline

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -27,10 +27,10 @@ jobs:
 
       - name: Build, tag, and push Docker images to Amazon ECR
         run: |
-          docker build -t ${{ steps.login-ecr.outputs.registry }}/tvmc-frontend:latest ./frontend
-          docker push ${{ steps.login-ecr.outputs.registry }}/tvmc-frontend:latest
-          docker build -t ${{ steps.login-ecr.outputs.registry }}/tvmc-backend:latest ./backend
-          docker push ${{ steps.login-ecr.outputs.registry }}/tvmc-backend:latest
+          docker build -t ${{ steps.login-ecr.outputs.registry }}/tvmc-repo:tvmc-frontend ./frontend
+          docker push ${{ steps.login-ecr.outputs.registry }}/tvmc-repo:tvmc-frontend
+          docker build -t ${{ steps.login-ecr.outputs.registry }}/tvmc-repo:tvmc-backend ./backend
+          docker push ${{ steps.login-ecr.outputs.registry }}/tvmc-repo:tvmc-backend
 
       - name: Retrieve task definition from GitHub Secret
         run: echo "${{ secrets.ECS_TASK_DEFINITION }}" > task-definition.json
