--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -32,8 +32,8 @@ jobs:
           docker build -t ${{ steps.login-ecr.outputs.registry }}/tvmc-repo:tvmc-backend ./backend
           docker push ${{ steps.login-ecr.outputs.registry }}/tvmc-repo:tvmc-backend
 
-      - name: Retrieve task definition from GitHub Secret
-        run: printf "%s" "${{ secrets.ECS_TASK_DEFINITION }}" > task-definition.json
+      - name: Retrieve and decode task definition from GitHub Secret
+        run: echo "${{ secrets.ECS_TASK_DEFINITION_B64 }}" | base64 --decode > task-definition.json
 
       - name: Output task definition for debugging
         run: cat task-definition.json
